ros2_ws/src/log/build_2025-10-09_13-19-56/ten_pub/stderr.log
  File "/home/chelbaev/NSU/robots/ros2_ws/src/install/ten_pub/lib/python3.10/site-packages/ten_pub/publisher_member_function.py", line 32
    msg.linear.x = = 1 
                   ^
SyntaxError: invalid syntax

